# ToaVM

./: .gitignore  LICENSE  README.md
docs/: TRADEOFFS.md
experiments/01-fixed-width-opcodes/: README.md  main.cpp
experiments/02-jvm-bytecodes/: Calc.java  README.md  main.cpp
experiments/03-jvm-forloop/: README.md  main.cpp
experiments/04-forloop-with-templates/: README.md  main.cpp
lifter/: CMakeLists.txt  util.cmake
lifter/demos/read_class_file/src/: CMakeLists.txt  main.cpp
lifter/include/frontend/jbc/: opcodes.hpp
lifter/libs/jbc/: CMakeLists.txt
lifter/libs/jbc/include/jbc/: ClassFile.hpp  ClassReader.hpp  Opcodes.hpp
lifter/libs/jbc/src/jbc/: ClassFile.cpp  JBCStructs.cpp  interpreter.cpp
lifter/libs/jbc_view/: CMakeLists.txt
lifter/libs/jbc_view/inc/: AccessFlags.hpp  CPULog.hpp  ClassViewer.hpp
lifter/libs/jbc_view/src/: CPULog.cpp  ClassViewer.cpp
lifter/resources/jbc/: CMakeLists.txt
lifter/resources/jbc/src/: ForLoop.java
lifter/src/: CMakeLists.txt  main.cpp
